--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -19,12 +19,11 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <!-- <link rel="icon" type="image/png" href="../assets/images/favicon.png" /> -->
  <!-- favicon -->
-<link rel="icon" type="image/png" href="src/assets/images/favicon.png" />
+<link rel="icon" type="image/png" href="/favicon.png" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Icons -->
-<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
-
+<link rel="preload" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" as="style" onload="this.rel='stylesheet'">
 <!-- Font preloads -->
 <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
 <link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
