--- a/src/styles/components/case-study.scss
+++ b/src/styles/components/case-study.scss
@@ -30,7 +30,7 @@
         border-radius: 16px;
         padding: 0;
         filter: grayscale(0.6);
-        video {
+        img {
             border-top-left-radius: 16px;
             border-top-right-radius: 16px;
             width: 100%;
@@ -41,7 +41,7 @@
         &:hover {
             transition: all 0.4s;
             filter: grayscale(0);
-            video {
+            img {
                 transition: all 0.4s;
             }    
         }
