--- a/src/styles/components/case-study.scss
+++ b/src/styles/components/case-study.scss
@@ -30,12 +30,19 @@
         border-radius: 16px;
         padding: 0;
         filter: grayscale(0.6);
+
+        .image-container {
+            width: 100%;
+            height: 13.75rem;
+            overflow: hidden;
+        }
         img {
             border-top-left-radius: 16px;
             border-top-right-radius: 16px;
             width: 100%;
             height: auto;
             transition: all 0.4s;
+            object-fit: cover;
         }
 
         &:hover {
@@ -147,6 +154,7 @@
     }
 
     @include tabletDown {
+
         dialog {
             .copy-container {
                 padding: 1.5rem;
