--- a/src/styles/blog-content.scss
+++ b/src/styles/blog-content.scss
@@ -1,4 +1,4 @@
-// ------------- Blog Styling -------------
+// ------------- Blog Styling (Typescale 1.125) -------------
 
 .blog-content {
 	h1, h2, h3, h4, h5, h6, p {
@@ -6,28 +6,24 @@
 	}
 
     h1 {
-        font-size: 4.2rem;
+        font-size: 2.27rem;
     }
 
     h2 {
         margin-top: 2.5rem;
-        font-size: 3.2rem;
+        font-size: 1.802rem;
     }
 
     h3 {
-        font-size: 1.7rem;
+        font-size: 1.602rem;
     }
 
     h4, h5, h6 {
-        font-size: 1.3rem;
+        font-size: 1.266rem;
     }
 
     p, li {
-        font-size: 1.3rem;
-    }
-
-    p:first-of-type {
-        margin-top: 2.25rem;
+        font-size: 1.266rem;
     }
 
     img {
@@ -40,23 +36,23 @@
 @include mobileOnly {
     .blog-content {
         h1 {
-            font-size: 2.7rem;
+            font-size: 1.602rem;
         }
 
         h2 {
-            font-size: 2.3rem;
+            font-size: 1.424rem;
         }
 
         h3 {
-            font-size: 1.3rem;
+            font-size: 1.266rem;
         }
 
         h4, h5, h6 {
-            font-size: 1rem;
+            font-size: 1.125rem;
         }
 
         p, li {
-            font-size: 1rem;
+            font-size: 1.125rem;
         }
     }
 }
