--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -18,7 +18,7 @@ const navItems = [
     </ul>
 </nav>
 <nav class="mobile-nav">
-    <a class="btn-ghost logo" href="/">andrew.leach.design</a>
+    <a class="btn-ghost logo" href="/">andrew.leach.dev</a>
     <button class="toggle-button open lnr lnr-menu-circle"></button>
     <button class="toggle-button close lnr lnr-cross-circle"></button>
     <div class="mobile-items">
