--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -56,7 +56,9 @@ const { title, description, category, heroImageAlt, pubDate, updatedDate, heroIm
 	}
 
 	.back-link {
+		color: var(--color-black);
 		font-size: 1.3rem;
+		text-decoration: none;
 	}
 
 	.hero-image {
@@ -85,6 +87,7 @@ const { title, description, category, heroImageAlt, pubDate, updatedDate, heroIm
 		padding-top: 1rem;
 		text-align: center;
 		line-height: 1;
+		margin-bottom: 2rem;
 		h1 {
 			margin-top: 1rem;
 			padding-bottom: 1rem;
