Case study image refactor (#3)
* import old blogs

* blog home setup

* blog template styling edits

* compress case studies

* compressed case study images

* remove unused import

* script fixes and chrome blur bug fix

* remove lottie iframe

* performance improvements

* test commit

* replace videos with images

* replaces videos with images

* styling revisions

* mask email

* increase case study gap

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -18,7 +18,7 @@ const navItems = [
     </ul>
 </nav>
 <nav class="mobile-nav">
-    <a class="btn-ghost logo" href="/">andrew.leach.design</a>
+    <a class="btn-ghost logo" href="/">andrew.leach.dev</a>
     <button class="toggle-button open lnr lnr-menu-circle"></button>
     <button class="toggle-button close lnr lnr-cross-circle"></button>
     <div class="mobile-items">
@@ -116,7 +116,7 @@ const navItems = [
             .mobile-items {
                 position: static;
                 background: var(--color-surface_base-transparent);
-                backdrop-filter: blur(8px);
+                backdrop-filter: blur(20px);
                 position: absolute;
                 inset: 0;
                 display: flex;
