--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -37,6 +37,16 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="title" content={title} />
 <meta name="description" content={description} />
 
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-KC8L89HGVS"></script>
+<script type="text/partytown">
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-KC8L89HGVS');
+</script>
+
 <!-- Open Graph / Facebook -->
 <!-- <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
